--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: Cybercode
     env: ubuntu
+    dockerfile: false  # تعطيل البحث عن Dockerfile
     buildCommand: |
       apt-get update && apt-get install -y lua5.3 && apt-get clean
     startCommand: lua Cybercode.lua
