--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   - type: web
     name: Cybercode
     env: ubuntu
-    dockerfile: false  # تعطيل البحث عن Dockerfile
     buildCommand: |
-      apt-get update && apt-get install -y lua5.3 && apt-get clean
+      apt-get update && apt-get install -y lua5.2
     startCommand: lua Cybercode.lua
     plan: free
     autoDeploy: true
