--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       luarocks install luasec
       luarocks install redis-lua
       luarocks install dkjson
-    startCommand: bash -c "redis-server --daemonize yes && python3 -m http.server 8080 & lua /app/start.lua"
+    startCommand: bash -c "redis-server --daemonize yes && lua /app/start.lua"
     plan: free
     autoDeploy: true
     envVars:
